syntax = "proto3";

package telemetry.messages;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message HubEvent {
  string hub_id = 1;
}
